<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175"
        tools:layout_editor_absoluteX="29dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        tools:layout_editor_absoluteX="29dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/passwordConfirmEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/deep_sea_green"
        android:text="@string/create"
        android:onClick="register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEditText" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/deep_sea_green"
        android:text="@string/cancel"
        android:onClick="cancel"
        app:layout_constraintLeft_toRightOf="@id/registrationButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEditText" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation" />


</androidx.constraintlayout.widget.ConstraintLayout>