<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoggedInProfile">


    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/email_adress"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        tools:layout_editor_absoluteX="29dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#0E9588"
        android:hint="@string/login"
        android:onClick="login"
        android:textColorHint="@color/white"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:layout_editor_absoluteX="-31dp" />

    <Button
        android:id="@+id/registrationId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#0E9588"
        android:hint="@string/create_an_account"
        android:textColorHint="@color/white"
        android:onClick="accountCreate"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:layout_editor_absoluteX="-31dp" />

</androidx.constraintlayout.widget.ConstraintLayout>